# Solder-Robot

./: .gitignore  CMakeLists.txt  MATERIALS.md  README.md
docs/: api.md  maintenance.md  technical.md  user_manual.md
include/: data_logger.h  energy_manager.h  gui.h  job_manager.h  maintenance_system.h  motion_controller.h  network_manager.h  pcb_editor.h  pcb_editor_window.h  program_manager.h  security_system.h  sensor_manager.h  temperature_control.h  vision_system.h
src/: data_logger.cpp  energy_manager.cpp  gui.cpp  job_manager.cpp  main.cpp  maintenance_system.cpp  motion_controller.cpp  network_manager.cpp  pcb_editor.cpp  pcb_editor_window.cpp  program_manager.cpp  security_system.cpp  sensor_manager.cpp  temperature_control.cpp  vision_system.cpp
